--- a/drag-and-drop/src/app.html
+++ b/drag-and-drop/src/app.html
@@ -10,3 +10,10 @@
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
+
+<style>
+	html, body, main {
+		margin: 0;
+		padding: 0;
+	}
+</style>
